compilation_errors.txt
# AGI操作系统编译错误收集

## 借用冲突错误(E0502)

### 1. lifecycle.rs 借用冲突

```rust
error[E0502]: cannot borrow `*self` as mutable because it is also borrowed as immutable
   --> src/system/lifecycle.rs:942:17
    |
937 |         for id in &self.startup_order {
    |                   -------------------
    |                   |
    |                   immutable borrow occurs here
    |                   immutable borrow later used here
...
942 |                 self.start_component(id)?;
    |                 ^^^^^^^^^^^^^^^^^^^^^^^^ mutable borrow occurs here
```

### 2. lifecycle.rs 另一处借用冲突

```rust
error[E0502]: cannot borrow `*self` as mutable because it is also borrowed as immutable
   --> src/system/lifecycle.rs:958:17
    |
953 |         for id in &self.shutdown_order {
    |                   --------------------
    |                   |
    |                   immutable borrow occurs here
    |                   immutable borrow later used here
...
958 |                 self.stop_component(id)?;
    |                 ^^^^^^^^^^^^^^^^^^^^^^^ mutable borrow occurs here
```

### 3. lifecycle.rs 第三处借用冲突

```rust
error[E0502]: cannot borrow `*self` as mutable because it is also borrowed as immutable
    --> src/system/lifecycle.rs:1019:17
     |
1014 |         for id in &self.shutdown_order {
     |                   --------------------
     |                   |
     |                   immutable borrow occurs here
     |                   immutable borrow later used here
...
1019 |                 self.pause_component(id)?;
     |                 ^^^^^^^^^^^^^^^^^^^^^^^^ mutable borrow occurs here
```

### 4. reflection.rs 借用冲突

```rust
error[E0502]: cannot borrow `*self` as immutable because it is also borrowed as mutable
   --> src/reflection/reflection.rs:907:26
    |
894 | ... item = &mut self.items[item_index];
    |                 ---------- mutable borrow occurs here
...
907 | ... processors = self.get_processors_for_type(item.get_reflection_type());
    |                  ^^^^                         ---- mutable borrow later used here
    |                  |
    |                  immutable borrow occurs here
```

## 未使用变量警告

```rust
warning: unused variable: `data`
   --> src/system/integration.rs:460:51
    |
460 | ...: AsRef<str>>(&mut self, data: S) -> Result<String, IntegrationError> {
    |                             ^^^^ help: if this is intentional, prefix it with an underscore: `_data`
```

## 总结

- 43个编译错误
- 27个警告
- 主要问题集中在借用冲突和未使用变量
